--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
   color: white;
 }
@@ -18,6 +18,17 @@ body {
   padding: 50px;
 }
 
+
+.upper-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.space-between {
+  margin-top: 20px;
+}
+
+
 /* Search Input */
 
 .search-container {
@@ -25,7 +36,7 @@ body {
   border-bottom: 3px solid white;
   width: 280px;
   padding: 0px 5px 5px 10px;
-  margin: 0px;
+  margin: 0px 40px 0px 0px;
 }
 
 #searchInput {
@@ -50,7 +61,7 @@ body {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
   color: white;
   opacity: 1;
-  /* Firefox */
+  /* opacity = for Firefox */
   font-weight: 700;
   font-size: 1.4rem;
 }
@@ -67,4 +78,105 @@ body {
   color: white;
   font-weight: 700;
   font-size: 1.4rem;
+}
+
+#place {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+#temperature {
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+#weatherCondition {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.icon-text-container {
+  display: flex;
+  align-items: center;
+}
+
+.weather-icon {
+  width: 40px;
+  margin-right: 10px;
+}
+
+#temperatureFeelsLike,
+#humidity,
+#windSpeed {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+
+#lower-container {
+  display: flex;
+  gap: 5vw;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-top: 10vh;
+  position: absolute;
+  bottom: 30px;
+}
+
+@media (max-height: 500px) {
+  #lower-container {
+    position: static;
+  }
+}
+
+@media (max-width: 800px) {
+  #lower-container {
+    flex-direction: column;
+    position: static;
+  }
+}
+
+@media (max-width: 600px) {
+
+  body {
+    padding: 30px;
+  }
+
+  .search-container {
+    border-bottom: 2px solid white;
+    width: 190px;
+    margin: 0px 20px 0px 0px;
+  }
+
+  #searchInput {
+    border: 0;
+    width: 150px;
+    font-weight: 700;
+    font-size: 1.1rem;
+  }
+
+  #searchButton {
+    height: 18px;
+    width: 18px;
+  }
+
+  ::placeholder {
+    font-size: 0.9rem;
+  }
+
+  :-ms-input-placeholder {
+    font-size: 0.9rem;
+  }
+
+  ::-ms-input-placeholder {
+    font-size: 0.9rem;
+  }
+
+
+  #temperatureFeelsLike,
+  #humidity,
+  #windSpeed {
+    font-size: 1.1rem;
+    font-weight: 600;
+  }
 }
